# olmoearth_projects

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-test.yml
conus_solar_tracking/: CLEAN_SETUP.md  PHOENIX_TEST_READY.md  QUICK_START.md  README.md  RUN_PHOENIX_TEST.md  SETUP_CONDA.md  SETUP_GUIDE.md  START_HERE.md  custom_lightning_module.py  environment.yml  run_phoenix_test.sh  setup_conda_auto.sh  setup_conda_clean.sh  setup_uv.sh
conus_solar_tracking/configs/2017/: prediction_request_geometry.geojson
conus_solar_tracking/configs/2019/: olmoearth_run.yaml
conus_solar_tracking/configs/2020/: prediction_request_geometry.geojson
conus_solar_tracking/configs/2022/: prediction_request_geometry.geojson
conus_solar_tracking/configs/2023/: prediction_request_geometry.geojson
conus_solar_tracking/configs/2024/: prediction_request_geometry.geojson
conus_solar_tracking/configs/2025/: prediction_request_geometry.geojson
conus_solar_tracking/configs/test/: dataset.json  model.yaml  prediction_request_geometry.geojson
conus_solar_tracking/geometries/: conus_2018.geojson  conus_2019.geojson  conus_2021.geojson
conus_solar_tracking/scripts/: analyze_changes.py  compare_years.py  create_conus_geometry.py  run_all_years.py  run_phoenix_visualizations.py  setup_year_configs.sh  visualize_geotiff.py  visualize_trends.py
docs/: internal.md  mangrove.md
docs/Cookbooks/: OE_FT_oer.md  OE_FT_rslp.md  OE_FTstudio.md  OlmoEarth_SFT_QuickStart.md
olmoearth_projects/: main.py
olmoearth_projects/olmoearth_run/: README.md  olmoearth_run.py
olmoearth_projects/projects/: __init__.py
olmoearth_projects/projects/lfmc/: __init__.py  prepare_labels_herbaceous_woody.py
olmoearth_projects/projects/mozambique_lulc/: __init__.py  check_label_quality.py  ckpt_to_path.py  create_label_raster.py  create_windows_for_lulc.py  points_per_class.py  update_train_test_split.py
olmoearth_projects/utils/label_quality/: README.md  __init__.py  spatial_clustering.py
olmoearth_run_data/: .gitignore
olmoearth_run_data/awf/: model.yaml  olmoearth_run.yaml  prediction_request_geometry.geojson
olmoearth_run_data/ecosystem_type_mapping/: dataset.json
olmoearth_run_data/forest_loss/: dataset.json  model.yaml  olmoearth_run.yaml  prediction_request_geometry.geojson
olmoearth_run_data/forest_loss_driver/: dataset.json
olmoearth_run_data/lfmc/: .gitignore  dataset.json
olmoearth_run_data/lfmc/s1_s2/: dataset.json  model.yaml  olmoearth_run.yaml
olmoearth_run_data/mangrove/: dataset.json  model.yaml  olmoearth_run.yaml
olmoearth_run_data/mangrove/loss/inference/stage_0/: model.yaml
olmoearth_run_data/mozambique_lulc/: README.md  config.json  dataset.json  model.yaml  olmoearth_run.yaml  olmoearth_run_croptype.yaml  prediction_request_geometry.geojson  rslp_finetuning.yaml  rslp_finetuning_croptype.yaml
olmoearth_run_data/mozambique_lulc/gaza/: dataset.json  model.yaml  olmoearth_run.yaml  prediction_request_geometry.geojson
olmoearth_run_data/nandi/: dataset.json
olmoearth_run_data/satlas_solar_farm/: dataset.json  model.yaml
tests/integration/olmoearth_run/: test_olmoearth_run.py
tests/unit/utils/label_quality/: test_spatial_clustering.py
