[project]
name = "olmoearth_projects"
version = "0.0.1"
description = "OlmoEarth projects"
authors = [
    { name = "OlmoEarth Team" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"

dependencies = [
    "geopandas>=1.1.1",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.0",
    "PyYAML>=6",
    "rslearn[extra]>=0.0.16",
    "wandb>=0.21",
    "olmoearth-runner>=0.1.10",
    "olmoearth_pretrain",
]


[project.optional-dependencies]
dev = [
    "interrogate>=1.7.0",
    "mypy>=1.17.1,<2",
    "pre-commit>=4.3.0",
    "pytest>=8.2",
    "pytest-dotenv",
    "pytest-forked",
    "pytest-xdist",
    "ruff>=0.7",
]

[project.urls]
homepage = "https://github.com/allenai/olmoearth_projects"
issues = "https://github.com/allenai/olmoearth_projects/issues"
repository = "https://github.com/allenai/olmoearth_projects"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["olmoearth_projects*"]

[tool.uv.sources]
olmoearth_pretrain = { git = "https://github.com/allenai/olmoearth_pretrain.git", branch = "main" }


[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["D", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
]
